Fix FiltersPanel z-index.

--- a/less/graph.less
+++ b/less/graph.less
@@ -497,6 +497,13 @@ html.nomenu #menus, html.nomenu #sliders {
     }
 }
 
+#filtersPanel {
+    z-index: @menus-z;
+    &:hover {
+        z-index: @modal-z;
+    }
+}
+
 .settingsPanel {
     z-index: @modal-z;
 }
